bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (Math.abs(a-10) < 0) {
  ^